Default environment variables to empty.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,14 +18,14 @@ services:
       
       # SMTP Configuration
       - QUANT_SMTP_RELAY_ENABLED=${QUANT_SMTP_RELAY_ENABLED:-false}
-      - QUANT_SMTP_HOST=${QUANT_SMTP_HOST}
+      - QUANT_SMTP_HOST=${QUANT_SMTP_HOST:-}
       - QUANT_SMTP_PORT=${QUANT_SMTP_PORT:-587}
-      - QUANT_SMTP_USERNAME=${QUANT_SMTP_USERNAME}
-      - QUANT_SMTP_PASSWORD=${QUANT_SMTP_PASSWORD}
-      - QUANT_SMTP_FROM=${QUANT_SMTP_FROM}
-      - QUANT_SMTP_FROM_NAME=${QUANT_SMTP_FROM_NAME}
-      - QUANT_SMTP_FROM_DOMAIN=${QUANT_SMTP_FROM_DOMAIN}
-      - QUANT_SMTP_HOSTNAME=${QUANT_SMTP_HOSTNAME}
+      - QUANT_SMTP_USERNAME=${QUANT_SMTP_USERNAME:-}
+      - QUANT_SMTP_PASSWORD=${QUANT_SMTP_PASSWORD:-}
+      - QUANT_SMTP_FROM=${QUANT_SMTP_FROM:-}
+      - QUANT_SMTP_FROM_NAME=${QUANT_SMTP_FROM_NAME:-}
+      - QUANT_SMTP_FROM_DOMAIN=${QUANT_SMTP_FROM_DOMAIN:-}
+      - QUANT_SMTP_HOSTNAME=${QUANT_SMTP_HOSTNAME:-}
       
 
     healthcheck:
