--- a/.ddev/.gitignore
+++ b/.ddev/.gitignore
@@ -3,7 +3,13 @@
 .webimageBuild/
 .dbimageBuild/
 .homeadditions/
-**/README.txt
+apache/
+nginx_full/
+providers/
+xhprof/
+**/*example
+**/.gitattributes
+**/README.*txt
 
 # DDEV runtime directories  
 db_snapshots/
