--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -1,3 +1,5 @@
+# This workflow is an example of how you can build and push this codebase to Quant Cloud.
+# Use this as a starting point for your own workflow if you are forking this repository.
 name: Build and Push Apache+PHP to Quant Cloud
 
 on:
@@ -23,44 +25,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Set up environment variables
-        id: vars
-        run: |
-          if [[ $GITHUB_REF == refs/tags/* ]]; then
-            # For tags, use the tag name
-            TAG=${GITHUB_REF#refs/tags/}
-            echo "suffix=-${TAG}" >> $GITHUB_OUTPUT
-          elif [[ $GITHUB_REF == refs/heads/develop ]]; then
-            # For develop branch, use -staging suffix
-            echo "suffix=-staging" >> $GITHUB_OUTPUT
-            echo "environment=staging" >> $GITHUB_OUTPUT
-          elif [[ $GITHUB_REF == refs/heads/main ]]; then
-            # For main branch, use -latest suffix
-            echo "suffix=-latest" >> $GITHUB_OUTPUT
-            echo "environment=production" >> $GITHUB_OUTPUT
-          else
-            echo "Error: Unknown branch or tag ref: $GITHUB_REF"
-            exit 1
-          fi
-
-      - name: Get ECR Credentials
-        uses: quantcdn/quant-cloud-ecr-action@v1
-        id: ecr-login
+      - name: Initialize Quant Cloud
+        uses: quantcdn/quant-cloud-init-action@v1.1.3
+        id: init
         with:
-          api_key: ${{ secrets.QUANT_API_KEY }}
-          organization: ${{ secrets.QUANT_ORGANIZATION }}
-
-      - name: Login to ECR
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ steps.ecr-login.outputs.endpoint }}
-          username: ${{ steps.ecr-login.outputs.username }}
-          password: ${{ steps.ecr-login.outputs.password }}
-
-      - name: Strip protocol from ECR endpoint
-        id: ecr-endpoint-stripped
-        run: |
-          echo "stripped_endpoint=$(echo '${{ steps.ecr-login.outputs.endpoint }}' | sed -E 's|^https?://||')" >> $GITHUB_OUTPUT
+          quant_organization: ${{ secrets.QUANT_ORGANIZATION }}
+          quant_api_key: ${{ secrets.QUANT_API_KEY }}
 
       - name: Build and push Apache+PHP image
         uses: docker/build-push-action@v5
@@ -69,18 +39,30 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            ${{ steps.ecr-endpoint-stripped.outputs.stripped_endpoint }}/${{ secrets.QUANT_ORGANIZATION }}/${{ secrets.QUANT_APPLICATION }}:apache-php${{ steps.vars.outputs.suffix }}
+            ${{ steps.init.outputs.stripped_endpoint }}/${{ secrets.QUANT_ORGANIZATION }}/${{ secrets.QUANT_APPLICATION }}:apache-php${{ steps.init.outputs.image_suffix }}
           cache-from: |
             type=gha,scope=php8.4
             type=registry,ref=ghcr.io/quantcdn-templates/app-apache-php:cache-php8.4
           cache-to: |
             type=gha,mode=max,scope=php8.4
 
-      - name: Redeploy environment
+      - name: Create environment if it doesn't exist
+        if: ${{ !startsWith(github.ref, 'refs/tags/') && steps.init.outputs.environment_exists == 'false' }}
+        uses: quantcdn/quant-cloud-environment-action@v1.2.1
+        with:
+          api_key: ${{ secrets.QUANT_API_KEY }}
+          organization: ${{ secrets.QUANT_ORGANIZATION }}
+          app_name: ${{ steps.init.outputs.quant_application }}
+          environment_name: ${{ steps.init.outputs.environment_name }}
+          from_environment: production
+          image_suffix: ${{ steps.init.outputs.image_suffix_clean }}
+
+      - name: Redeploy existing environment
+        if: ${{ !startsWith(github.ref, 'refs/tags/') && steps.init.outputs.environment_exists == 'true' }}
         uses: quantcdn/quant-cloud-environment-state-action@v1
         with:
           api_key: ${{ secrets.QUANT_API_KEY }}
           organization: ${{ secrets.QUANT_ORGANIZATION }}
-          application: ${{ secrets.QUANT_APPLICATION }}
-          environment: ${{ steps.vars.outputs.environment }}
+          application: ${{ steps.init.outputs.quant_application }}
+          environment: ${{ steps.init.outputs.environment_name }}
           action: redeploy
