--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,7 @@
+# This workflow is used to build and test the Apache+PHP image.
+# It creates the public, default images that can be deployed directly to Quant Cloud.
+# If you wish to customize, you can fork this repository, make modifications, and then
+# use the "build-deploy.yaml" workflow to build and push your own images to Quant Cloud.
 name: Build and Publish Apache+PHP Images
 
 on:
