--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -31,6 +31,7 @@ jobs:
         with:
           quant_organization: ${{ secrets.QUANT_ORGANIZATION }}
           quant_api_key: ${{ secrets.QUANT_API_KEY }}
+          quant_application: quantcdn-templates
 
       - name: Build and push Apache+PHP image
         uses: docker/build-push-action@v5
@@ -53,7 +54,7 @@ jobs:
           api_key: ${{ secrets.QUANT_API_KEY }}
           organization: ${{ secrets.QUANT_ORGANIZATION }}
           app_name: ${{ steps.init.outputs.quant_application }}
-          environment_name: ${{ steps.init.outputs.environment_name }}
+          environment_name: apache-php-${{ steps.init.outputs.environment_name }}
           from_environment: production
           image_suffix: ${{ steps.init.outputs.image_suffix_clean }}
 
@@ -64,5 +65,5 @@ jobs:
           api_key: ${{ secrets.QUANT_API_KEY }}
           organization: ${{ secrets.QUANT_ORGANIZATION }}
           application: ${{ steps.init.outputs.quant_application }}
-          environment: ${{ steps.init.outputs.environment_name }}
+          environment: apache-php-${{ steps.init.outputs.environment_name }}
           action: redeploy
