--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -10,11 +10,6 @@ on:
     tags:
       - '*'
 
-env:
-  # Customize these values for your fork
-  APP_NAME: quantcdn-templates
-  ENV_NAME: ${{ github.event.repository.name }}
-
 concurrency:
   group: build-and-push-${{ github.ref }}
   cancel-in-progress: true
@@ -31,27 +26,20 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Initialize Quant Cloud
-        uses: quantcdn/quant-cloud-init-action@v1.1.3
+        uses: quantcdn/quant-cloud-init-action@v1.1.4
         id: init
         with:
           quant_organization: ${{ secrets.QUANT_ORGANIZATION }}
           quant_api_key: ${{ secrets.QUANT_API_KEY }}
-          quant_application: ${{ env.APP_NAME }}
-          environment_name_override: ${{ env.ENV_NAME }}
 
       - name: Build and push Apache+PHP image
         uses: docker/build-push-action@v5
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
           push: true
           tags: |
-            ${{ steps.init.outputs.stripped_endpoint }}/${{ secrets.QUANT_ORGANIZATION }}/${{ env.APP_NAME }}:${{ env.ENV_NAME }}${{ steps.init.outputs.image_suffix }}
-          cache-from: |
-            type=gha,scope=php8.4
-            type=registry,ref=ghcr.io/${{ env.APP_NAME }}/${{ env.ENV_NAME }}:cache-php8.4
-          cache-to: |
-            type=gha,mode=max,scope=php8.4
+            ${{ steps.init.outputs.stripped_endpoint }}/${{ secrets.QUANT_ORGANIZATION }}/${{ steps.init.outputs.quant_application }}:${{ steps.init.outputs.image_suffix_clean }}
 
       - name: Create environment if it doesn't exist
         if: ${{ !startsWith(github.ref, 'refs/tags/') && steps.init.outputs.environment_exists == 'false' }}
@@ -60,7 +48,7 @@ jobs:
           api_key: ${{ secrets.QUANT_API_KEY }}
           organization: ${{ secrets.QUANT_ORGANIZATION }}
           app_name: ${{ steps.init.outputs.quant_application }}
-          environment_name: ${{ env.ENV_NAME }}${{ steps.init.outputs.image_suffix }}
+          environment_name: ${{ steps.init.outputs.environment_name }}
           from_environment: production
           image_suffix: ${{ steps.init.outputs.image_suffix_clean }}
 
@@ -71,5 +59,5 @@ jobs:
           api_key: ${{ secrets.QUANT_API_KEY }}
           organization: ${{ secrets.QUANT_ORGANIZATION }}
           application: ${{ steps.init.outputs.quant_application }}
-          environment: ${{ env.ENV_NAME }}${{ steps.init.outputs.image_suffix }}
+          environment: ${{ steps.init.outputs.environment_name }}
           action: redeploy
