--- a/quant/php.ini.d/96-memory.ini.template
+++ b/quant/php.ini.d/96-memory.ini.template
@@ -1,5 +1,6 @@
 ; Memory Configuration
 ; Sets PHP memory limits for optimal performance
+; Configurable via PHP_MEMORY_LIMIT environment variable (default: 256M)
 
 ; Maximum memory per script execution
-memory_limit = 256M
+memory_limit = ${PHP_MEMORY_LIMIT}
