--- a/docker-compose.override.yml.example
+++ b/docker-compose.override.yml.example
@@ -12,6 +12,9 @@ services:
       - DB_USERNAME=apache_php
       - DB_PASSWORD=apache_php
       
+      # Disable TLS for local MySQL (production RDS uses TLS by default)
+      - DISABLE_DB_TLS=true
+      
       # SMTP Configuration (uncomment for testing)
       # - QUANT_SMTP_RELAY_ENABLED=false
       # - QUANT_SMTP_HOST=mailhog
