--- a/docker-compose.override.yml.example
+++ b/docker-compose.override.yml.example
@@ -4,6 +4,11 @@
 
 services:
   apache-php:
+    # Use custom entrypoint to run /quant-entrypoint.d/ scripts locally
+    # This allows testing SMTP relay, document root changes, etc.
+    entrypoint: ["docker-entrypoint.sh"]
+    command: ["apache2-foreground"]
+    
     environment:
       # Local development database variables
       - DB_HOST=db
